// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.

syntax = "proto2";

message rrc_ue_procedure {
    required uint64 timestamp = 1;
    required uint32 cucp_ue_index = 2;
    required uint32 procedure = 3;
    required uint32 success = 4;
    required uint32 meta = 5;
}
