// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.

syntax = "proto2";

message rrc_ue_remove {
    required uint64 timestamp = 1;
    required uint32 ue_index = 2;
}
