// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.

syntax = "proto2";

message rrc_ue_update_context {
    required uint64 timestamp = 1;
    required uint32 cucp_ue_index = 2;
    required uint32 old_cucp_ue_index = 3;
    required uint32 c_rnti = 4;
    required uint32 pci = 5;
    required uint32 tac = 6;
    required uint32 plmn = 7;
    required uint64 nci = 8;
}
