// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.

syntax = "proto2";

message rrc_ue_update_id {
    required uint64 timestamp = 1;
    required uint32 cucp_ue_index = 2;
    required uint32 timsi = 3;
}
